# mf

./: .gitignore  CLAUDE.md  ORCHESTRATION.md  PAPER_BUILD_DECOUPLING.md  README.md  SITE_CONTRACT.md  pyproject.toml
docs/plans/: 2026-02-16-packages-design.md  2026-02-16-packages-impl.md  2026-04-08-pubs-decoupling-design.md  2026-05-08-git-automation.md  2026-06-04-render-drift-engine-plan.md  2026-06-04-render-drift-engine.md
docs/reviews/: 2026-06-05-render-drift-engine.md
src/mf/: __init__.py  __main__.py  cli.py
tests/: __init__.py  conftest.py
tests/test_analytics/: __init__.py  test_aggregator.py  test_commands.py
tests/test_backup/: test_commands.py
tests/test_claude/: __init__.py  test_commands.py  test_installer.py
tests/test_config/: test_commands.py
tests/test_content/: __init__.py  test_audit_checks.py  test_auditor.py  test_commands.py  test_frontmatter.py  test_matcher.py  test_scanner.py
tests/test_core/: test_backup.py  test_config.py  test_crypto.py  test_database.py  test_drift.py  test_field_ops.py  test_findings.py  test_frontmatter.py  test_integrity.py  test_integrity_commands.py  test_status.py
tests/test_health/: test_checks.py  test_commands.py
tests/test_packages/: test_commands.py  test_config_integration.py  test_cran.py  test_database.py  test_drift.py  test_field_ops.py  test_generator.py  test_pypi.py  test_registries.py
tests/test_papers/: __init__.py  test_citation.py  test_drift.py  test_field_ops.py  test_generator.py  test_ingest_command.py  test_processor.py  test_resolve.py  test_set_commands.py  test_sync.py  test_zenodo.py
tests/test_posts/: test_commands.py
tests/test_projects/: test_codemeta.py  test_drift.py  test_field_ops.py  test_generator.py  test_github.py  test_importer.py  test_readme.py  test_set_commands.py
tests/test_publications/: test_database.py  test_drift.py  test_generate.py  test_migrate.py  test_sync.py
tests/test_series/: __init__.py  test_classify.py  test_commands.py  test_differ.py  test_field_ops.py  test_frontmatter.py  test_interactive_sync.py  test_mkdocs.py  test_set_commands.py  test_syncer.py
tests/test_taxonomy/: test_analyzer.py  test_commands.py
(+80 files in other folders)
